// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getShownInfo Возвращает заполненный объект с информацией о новостройке 1`] = `
Object {
  "mainPhotoUrl": "https://via.placeholder.com/150",
  "siteShownInfo": Object {
    "metro": Object {
      "metroId": 218432,
      "timeToMetro": 19,
      "transportToMetro": 2,
    },
  },
  "updateTime": 0,
}
`;

exports[`getShownInfo Возвращает заполненный объект с информацией об оффере 1`] = `
Object {
  "mainPhotoUrl": "https://via.placeholder.com/150",
  "offerShownInfo": Object {
    "metro": Object {
      "metroId": 218432,
      "timeToMetro": 19,
      "transportToMetro": 2,
    },
  },
  "updateTime": 0,
}
`;

exports[`getShownInfo Возвращает ничего 1`] = `undefined`;

exports[`getShownInfo Возвращает частично заполненный объект 1`] = `
Object {
  "mainPhotoUrl": "https://via.placeholder.com/150",
}
`;
